# whitaker

./: .gitattributes  .gitignore  .markdownlint.json  AGENTS.md  Cargo.toml  Makefile  README.md  bad_main  dylint.toml  fail_match_with_nested_if  lading.toml  libtest.rlib  pass_single_match_cluster  rust-toolchain.toml  typos.local.toml  typos.toml
common/: Cargo.toml
common/locales/cy/: bumpy_road_function.ftl  function_attrs_follow_docs.ftl  no_expect_outside_tests.ftl  no_unwrap_or_else_panic.ftl  public_fn_must_have_docs.ftl
common/locales/en-GB/: function_attrs_follow_docs.ftl  no_expect_outside_tests.ftl  no_std_fs_operations.ftl
common/src/: attrs.rs  complexity_signal.rs  config.rs  context.rs  diagnostics.rs  expr.rs  i18n.rs  lcom4.rs  lib.rs  path.rs  span.rs  testing.rs  tests.rs
common/src/attributes/: attribute.rs  helpers.rs  kind.rs  mod.rs  path.rs  tests.rs
common/src/brain_trait_metrics/: diagnostic.rs  diagnostic_tests.rs  evaluation.rs  evaluation_tests.rs  item.rs  metrics.rs  mod.rs  tests.rs
common/src/brain_type_metrics/: cognitive_complexity.rs  cognitive_complexity_tests.rs  diagnostic.rs  diagnostic_tests.rs  evaluation.rs  evaluation_tests.rs  foreign_reach.rs  mod.rs  tests.rs
common/src/decomposition_advice/: community.rs  community_kani.rs  mod.rs  note.rs  note_tests.rs  profile.rs  suggestion.rs  tests.rs  vector.rs
common/src/i18n/: diagnostics.rs  helpers.rs  loader.rs  locales.rs  mod.rs  selection.rs  testing.rs  tests.rs
common/src/lcom4/: extract.rs  mod.rs  tests.rs
common/src/rstest/: argument_fingerprint.rs  detection.rs  mod.rs  paragraph_fingerprint.rs  parameter.rs  span.rs  tests.rs
common/src/test_support/: decomposition.rs  decomposition_adjacency.rs  decomposition_label_propagation.rs  decomposition_vector_algebra.rs  fixtures.rs  mod.rs  ui.rs
common/tests/: brain_trait_evaluation_behaviour.rs  brain_trait_metrics_behaviour.rs  brain_type_evaluation_behaviour.rs  brain_type_metrics_behaviour.rs  cognitive_complexity_behaviour.rs  complexity_signal_behaviour.rs  context_behaviour.rs  cosine_threshold_behaviour.rs  decomposition_adjacency_behaviour.rs  decomposition_advice_behaviour.rs  decomposition_diagnostic_notes_behaviour.rs  decomposition_label_propagation_behaviour.rs  decomposition_vector_algebra_behaviour.rs  i18n_behaviour.rs  i18n_packaging.rs  i18n_quality.rs  lcom4_behaviour.rs  localizer_helpers.rs  method_extraction_behaviour.rs  rstest_detection_behaviour.rs  rstest_fingerprint_behaviour.rs  rstest_span_recovery_behaviour.rs
common/tests/features/: brain_trait_evaluation.feature  brain_trait_metrics.feature  brain_type_evaluation.feature  brain_type_metrics.feature  cognitive_complexity.feature  complexity_signal.feature  context_detection.feature  cosine_threshold.feature  decomposition_adjacency.feature  decomposition_advice.feature  decomposition_diagnostic_notes.feature  decomposition_label_propagation.feature  decomposition_vector_algebra.feature  i18n_ftl_smoke.feature  i18n_loader.feature  lcom4.feature  localizer_helpers.feature  method_extraction.feature  rstest_detection.feature  rstest_fingerprint.feature  rstest_span_recovery.feature
common/tests/i18n_quality/: ftl_smoke_behaviour.rs  mod.rs  suite.rs
common/tests/support/: i18n_ftl.rs  i18n_helpers.rs  mod.rs
crates/bumpy_road_function/: Cargo.toml
crates/bumpy_road_function/src/: analysis.rs  driver.rs  lib.rs
crates/bumpy_road_function/tests/: analysis_behaviour.rs  ui.rs
crates/bumpy_road_function/ui/: dylint.toml  fail_match_with_nested_if.rs  fail_match_with_nested_if.stderr  fail_two_clusters.rs  fail_two_clusters.stderr  fail_two_clusters_legacy.rs  fail_two_clusters_legacy.stderr  pass_single_cluster.rs  pass_single_match_cluster.rs
crates/clippy_utils/: Cargo.toml
crates/clippy_utils/src/: lib.rs
crates/conditional_max_n_branches/: Cargo.toml
crates/conditional_max_n_branches/src/: driver.rs  lib.rs  lib_ui_tests.rs
crates/conditional_max_n_branches/ui/: fail_configured_limit.dylint.toml  fail_configured_limit.rs  fail_configured_limit.stderr  fail_if_three_branches.rs  fail_if_three_branches.stderr  fail_match_guard.rs  fail_match_guard.stderr  fail_while_guard.rs  fail_while_guard.stderr  pass_custom_limit.dylint.toml  pass_custom_limit.rs  pass_if_let.rs  pass_if_two_branches.rs
crates/function_attrs_follow_docs/: Cargo.toml
crates/module_max_lines/: Cargo.toml
crates/module_must_have_inner_docs/: Cargo.toml
crates/no_expect_outside_tests/: Cargo.toml
crates/no_std_fs_operations/: Cargo.toml
crates/no_unwrap_or_else_panic/: Cargo.toml
crates/rstest_helper_should_be_fixture/: Cargo.toml
crates/test_must_not_have_example/: Cargo.toml
crates/whitaker_clones_core/: Cargo.toml  build.rs  build_support.rs
crates/whitaker_sarif/: Cargo.toml
installer/: Cargo.toml  README.md  dependency-binaries.toml
installer/scripts/: dependency_binaries_manifest.py
installer/src/: binstall_metadata.rs  binstall_metadata_tests.rs  builder.rs  cli.rs  cli_tests.rs  crate_name.rs  dependency_packaging.rs  dependency_packaging_tests.rs  deps.rs  dirs.rs  error.rs  git.rs  git_tests.rs  hex.rs  install_flow.rs  install_metrics.rs  install_metrics_error.rs  install_metrics_tests.rs  installer_packaging.rs  installer_packaging_tests.rs  lib.rs  list.rs  list_output.rs  main.rs  output.rs  pipeline.rs  pipeline_staging_tests.rs  pipeline_tests.rs  prebuilt.rs  prebuilt_path.rs  prebuilt_tests.rs  resolution.rs  scanner.rs  staged_suite.rs  stager.rs  test_support.rs  test_utils.rs  tests.rs  toolchain.rs  version.rs  (+3 more)
installer/tests/: behaviour.rs  behaviour_artefact.rs  behaviour_artefact_packaging.rs  behaviour_binstall.rs  behaviour_cli.rs  behaviour_core.rs  behaviour_dependency_binaries.rs  behaviour_docs.rs  behaviour_install_metrics.rs  behaviour_installer_release.rs  behaviour_prebuilt.rs  behaviour_staging.rs  behaviour_toolchain.rs  behaviour_workflows.rs  prebuilt_markers.rs  ui.rs
suite/: Cargo.toml
suite/src/: driver.rs  lib.rs  lints.rs  wiring.rs
suite/tests/: registration.rs
(+576 files in other folders)
