[workspace]
members = ["common", "crates/*"]
resolver = "2"

[workspace.dependencies]
camino = "1.2.1"
dylint_linting = "4.1.0"
dylint_testing = "4.1.0"
rustc_hir = { package = "rustc-hir", version = "*" }
rustc_lint = { package = "rustc-lint", version = "*" }
rustc_middle = { package = "rustc-middle", version = "*" }
rustc_session = { package = "rustc-session", version = "*" }
rustc_span = { package = "rustc-span", version = "*" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
thiserror = "1"

[package]
name = "whitaker"
version = "0.1.0"
edition = "2024"

[features]
default = ["dylint-driver"]
dylint-driver = ["dep:dylint_linting"]

[dependencies]

camino = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

dylint_linting = { workspace = true, optional = true }
dylint_testing = { workspace = true }

[dev-dependencies]
rstest = "0.26.1"
rstest-bdd = "0.1.0-alpha4"
rstest-bdd-macros = "0.1.0-alpha4"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# 1. hygiene
allow_attributes                    = "deny"
allow_attributes_without_reason     = "deny"
blanket_clippy_restriction_lints    = "deny"

# 2. debugging leftovers
dbg_macro       = "deny"
print_stdout    = "deny"
print_stderr    = "deny"

# 3. panic-prone operations
unwrap_used                     = "deny"
expect_used                     = "deny"
indexing_slicing                = "deny"
string_slice                    = "deny"
integer_division                = "deny"
integer_division_remainder_used = "deny"

# 4. portability
host_endian_bytes   = "deny"
little_endian_bytes = "deny"
big_endian_bytes    = "deny"

# 5. nursery idiom polish
or_fun_call            = "deny"
option_if_let_else     = "deny"
use_self               = "deny"
string_lit_as_bytes    = "deny"

# 6. numerical foot-guns
float_arithmetic = "deny"
