[workspace]
members = ["common", "crates/*"]
resolver = "2"

[workspace.dependencies]
camino = "1.2.1"
cargo_metadata = "0.23.0"
dylint_linting = "5"
dylint_testing = "5"
fluent-templates = "^0.13.1"
once_cell = "^1.21.3"
unic-langid = "^0.9.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
thiserror = "2"
rustc_ast = { path = "crates/rustc_ast", version = "0.1.0" }
rustc_attr_data_structures = { path = "crates/rustc_attr_data_structures", version = "0.1.0" }
rustc_hir = { path = "crates/rustc_hir", version = "0.1.0" }
rustc_lint = { path = "crates/rustc_lint", version = "0.1.0" }
rustc_middle = { path = "crates/rustc_middle", version = "0.1.0" }
rustc_session = { path = "crates/rustc_session", version = "0.1.0" }
rustc_span = { path = "crates/rustc_span", version = "0.1.0" }

[package]
name = "whitaker"
version = "0.1.0"
edition = "2024"

[features]
default = ["dylint-driver"]
dylint-driver = ["dep:dylint_linting"]

[dependencies]

camino = { workspace = true }
cargo_metadata = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

dylint_linting = { workspace = true, optional = true }

[dev-dependencies]
rstest = "0.26.1"
rstest-bdd = "0.1.0-alpha4"
rstest-bdd-macros = "0.1.0-alpha4"
dylint_testing = { workspace = true }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
string_slice = "deny"
or_fun_call = "deny"
option_if_let_else = "deny"
use_self = "deny"
string_lit_as_bytes = "deny"
float_arithmetic = "deny"
blanket_clippy_restriction_lints = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
host_endian_bytes = "deny"
little_endian_bytes = "deny"
big_endian_bytes = "deny"
integer_division = "deny"
integer_division_remainder_used = "deny"

[workspace.lints.rust]
missing_docs = "deny"
missing_crate_level_docs = "deny"
