[workspace]
members = ["common", "crates/*", "installer", "suite"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/leynos/whitaker"
homepage = "https://github.com/leynos/whitaker"
documentation = "https://github.com/leynos/whitaker/tree/main/docs/users-guide.md"

[workspace.dependencies]
common = { path = "common", version = "0.1.0" }
whitaker-installer = { path = "installer", version = "0.1.0" }
camino = "1.2.1"
cargo_metadata = "0.23.0"
clap = "4.5.38"
directories-next = "2.0.0"
dylint_linting = "5"
dylint_testing = "5"
libc = "0.2"
fluent-templates = "^0.13.1"
once_cell = "^1.21.3"
unic-langid = "^0.9.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
thiserror = "2"
log = "0.4.28"
rstest = "0.26.1"
rstest-bdd = "0.2.0"
rstest-bdd-macros = "0.2.0"
tempfile = "3.19.1"
which = "8.0.0"
wait-timeout = "0.2.1"
mockall = "0.13.1"
clippy_utils = { path = "crates/clippy_utils", version = "0.1.0" }
rustc_ast = { path = "crates/rustc_ast", version = "0.1.0" }
rustc_attr_data_structures = { path = "crates/rustc_attr_data_structures", version = "0.1.0" }
rustc_hir = { path = "crates/rustc_hir", version = "0.1.0" }
rustc_lint = { path = "crates/rustc_lint", version = "0.1.0" }
rustc_middle = { path = "crates/rustc_middle", version = "0.1.0" }
rustc_session = { path = "crates/rustc_session", version = "0.1.0" }
rustc_span = { path = "crates/rustc_span", version = "0.1.0" }

[package]
name = "whitaker"
version = "0.1.0"
edition = "2024"

[features]
default = []
dylint-driver = [
    "dep:dylint_linting",
    "dep:rustc_hir",
    "dep:rustc_lint",
    "dep:rustc_span",
]

[dependencies]

camino = { workspace = true }
cargo_metadata = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
common = { workspace = true }
whitaker-installer = { workspace = true }

rustc_hir = { workspace = true, optional = true }
rustc_lint = { workspace = true, optional = true }
rustc_span = { workspace = true, optional = true }
dylint_linting = { workspace = true, optional = true }

[dev-dependencies]
common = { workspace = true }
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
dylint_testing = { workspace = true }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# 1. hygiene
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
blanket_clippy_restriction_lints = "deny"
cognitive_complexity = "deny"
needless_pass_by_value = "deny"
implicit_hasher = "deny"

# 2. debugging leftovers
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

# 2. panic-prone operations
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
string_slice = "deny"
integer_division = "deny"
integer_division_remainder_used = "deny"
panic_in_result_fn = "deny"
unreachable = "deny"

# 4. portability
host_endian_bytes = "deny"
little_endian_bytes = "deny"
big_endian_bytes = "deny"

# 5. nursery idiom polish
let_underscore_must_use = "deny"
or_fun_call = "deny"
option_if_let_else = "deny"
self_named_module_files = "deny"
shadow_reuse = "deny"
shadow_same = "deny"
shadow_unrelated = "deny"
str_to_string = "deny"
string_lit_as_bytes = "deny"
try_err = "deny"
unneeded_field_pattern = "deny"
use_self = "deny"

# 6. numerical foot-guns
float_arithmetic = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
lossy_float_literal = "deny"

# 7. API ergonomics
missing_const_for_fn = "deny"
must_use_candidate = "deny"
unused_async = "deny"

# 8. Error handling
missing_panics_doc = "deny"
error_impl_error = "deny"
result_large_err = "deny"

[workspace.lints.rust]
unknown_lints = "deny"
renamed_and_removed_lints = "deny"
missing_docs = "deny"

[workspace.lints.rustdoc]
missing_crate_level_docs = "deny"
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
bare_urls = "deny"
invalid_html_tags = "deny"
invalid_codeblock_attributes = "deny"
unescaped_backticks = "deny"
