[package]
name = "common"
version = "0.1.0"
edition = "2024"
publish = false
description = "Internal common utilities for Whitaker lints"
license = "MIT OR Apache-2.0"

[dependencies]

camino = { workspace = true }
fluent-templates = { workspace = true }
glob = "0.3.3"
log = { workspace = true }
once_cell = { workspace = true }
tempfile = "3.14.0"
thiserror = { workspace = true }
unic-langid = { workspace = true }

[dev-dependencies]
# Testing: Behavioural specs now target rstest-bdd 0.1.0, the first stable
# release. Capture any regressions with `make test` and coordinate with the
# maintainers per `docs/rstest-bdd-users-guide.md` before gating behaviour
# tests or backporting fixes.
rstest = "0.26.1"
rstest-bdd = "0.1.0"
rstest-bdd-macros = "0.1.0"
regex = "1.10.4"
logtest = "2.0.0"


[lints.clippy]
expect_used = "deny"
unwrap_used = "deny"
