[package]
name = "common"
version = "0.2.0"
edition = "2024"
publish = false
description = "Internal common utilities for Whitaker lints"
license = "MIT OR Apache-2.0"

[features]
default = []

[dependencies]

camino = { workspace = true }
fluent-templates = { workspace = true }
glob = "0.3.3"
log = { workspace = true }
once_cell = { workspace = true }
tempfile = "3.14.0"
thiserror = { workspace = true }
unic-langid = { workspace = true }

[dev-dependencies]
# Testing: Behavioural specs use rstest-bdd 0.2.x (workspace pin). Capture any
# regressions with `make test` and coordinate with the maintainers per
# `docs/rstest-bdd-users-guide.md` before gating behaviour tests or backporting
# fixes.
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
regex = "1.10.4"
logtest = "2.0.0"


[lints.clippy]
expect_used = "deny"
unwrap_used = "deny"
