[package]
name = "whitaker-installer"
version = "0.1.0"
edition = "2024"
description = "Installer CLI for Whitaker Dylint lint libraries"
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[[bin]]
name = "whitaker-installer"
path = "src/main.rs"

[dependencies]
camino = { workspace = true }
clap = { workspace = true, features = ["derive"] }
directories-next = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
wait-timeout = { workspace = true }
which = { workspace = true }

[dev-dependencies]
libc = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
temp-env = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
