[package]
name = "whitaker-installer"
version = "0.1.1"
edition = "2024"
description = "Installer CLI for Whitaker Dylint lint libraries"
readme = "README.md"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[[bin]]
name = "whitaker-installer"
path = "src/main.rs"

[features]
## Exposes test utilities for use by external test suites.
##
## This feature gates the following API surface:
##
## - `StubExecutor`: A mock `CommandExecutor` implementation that returns
##   predefined responses for stubbed command invocations.
## - `StubMismatch`: An `InstallerError` variant returned when a stub receives
##   an unexpected or mismatched command invocation.
##
## ## When to enable
##
## Enable this feature only in `[dev-dependencies]` when writing integration
## tests that exercise installer logic without invoking real system commands:
##
## ```toml
## [dev-dependencies]
## whitaker-installer = { version = "0.1", features = ["test-support"] }
## ```
##
## ## Caveats
##
## - **Not for production use**: These utilities are designed solely for
##   testing and are excluded from release builds.
## - **API stability**: The test-support surface is not covered by semver
##   guarantees and may change between minor releases.
test-support = []

[dependencies]
camino = { workspace = true }
clap = { workspace = true, features = ["derive"] }
directories-next = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
wait-timeout = { workspace = true }

[dev-dependencies]
libc = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
temp-env = { workspace = true }
tempfile = { workspace = true }
whitaker-installer = { path = ".", features = ["test-support"] }

[lints]
workspace = true
