[package]
name = "bumpy_road_function"
version = "0.2.0"
edition = "2024"
publish = false
description = "Lint that flags multiple clusters of complex conditional logic"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
test = false

[features]
default = []
dylint-driver = [
    "dep:common",
    "dep:dylint_linting",
    "dep:fluent-templates",
    "dep:log",
    "dep:rustc_hir",
    "dep:rustc_lint",
    "dep:rustc_session",
    "dep:rustc_span",
    "dep:serde",
    "dep:whitaker",
]
constituent = ["dylint-driver", "dylint_linting/constituent"]

[dependencies]
common = { workspace = true, optional = true }
dylint_linting = { workspace = true, optional = true }
fluent-templates = { workspace = true, optional = true }
log = { workspace = true, optional = true }
rustc_hir = { workspace = true, optional = true }
rustc_lint = { workspace = true, optional = true }
rustc_session = { workspace = true, optional = true }
rustc_span = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
whitaker = { workspace = true, features = ["dylint-driver"], optional = true }

[dev-dependencies]
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
dylint_testing = { workspace = true }
whitaker = { workspace = true }
common = { workspace = true }
camino = { workspace = true }
tempfile = { workspace = true }
