[package]
name = "conditional_max_n_branches"
version = "0.1.0"
edition = "2024"
publish = false
description = "Dylint lint that enforces an upper bound on conditional branch counts"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
test = false

[features]
default = []
dylint-driver = [
    "dep:common",
    "dep:dylint_linting",
    "dep:fluent-templates",
    "dep:log",
    "dep:rustc_hir",
    "dep:rustc_lint",
    "dep:rustc_session",
    "dep:rustc_span",
    "dep:serde",
    "dep:whitaker"
]
constituent = ["dylint-driver", "dylint_linting/constituent"]

[dependencies]
common = { workspace = true, optional = true }
dylint_linting = { workspace = true, optional = true }
fluent-templates = { workspace = true, optional = true }
log = { workspace = true, optional = true }
rustc_hir = { workspace = true, optional = true }
rustc_lint = { workspace = true, optional = true }
rustc_session = { workspace = true, optional = true }
rustc_span = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
whitaker = { version = "0.1.0", path = "../../", features = ["dylint-driver"], optional = true }

[dev-dependencies]
common = { workspace = true }
whitaker = { version = "0.1.0", path = "../../" }
camino = { workspace = true }
glob = "0.3.0"
tempfile = "3.14.0"
rstest = "0.26.1"
rstest-bdd = "0.1.0"
rstest-bdd-macros = "0.1.0"
dylint_testing = { workspace = true }
serial_test = "3.1.0"
