[package]
name = "function_attrs_follow_docs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dylint_linting = { workspace = true }
rustc_ast = { workspace = true }
rustc_attr_data_structures = { workspace = true }
rustc_hir = { workspace = true }
rustc_lint = { workspace = true }
rustc_middle = { workspace = true }
rustc_session = { workspace = true }
rustc_span = { workspace = true }
common = { path = "../../common" }
log = { workspace = true }
whitaker = { path = "../../" }

[dev-dependencies]
rstest = { version = "0.26.1" }
rstest-bdd = { version = "0.1.0" }
rstest-bdd-macros = { version = "0.1.0" }
dylint_testing = { workspace = true }
serial_test = "3.1.0"
