[package]
name = "module_max_lines"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
test = false

[dependencies]
dylint_linting = { workspace = true }
rustc_hir = { workspace = true }
rustc_lint = { workspace = true }
rustc_session = { workspace = true }
rustc_span = { workspace = true }
common = { path = "../../common" }
log = { workspace = true }
whitaker = { path = "../../", features = ["dylint-driver"] }
fluent-templates = { workspace = true }

[dev-dependencies]
camino = { workspace = true }
rstest = { version = "0.26.1" }
rstest-bdd = { version = "0.1.0-alpha4" }
rstest-bdd-macros = { version = "0.1.0-alpha4" }
dylint_testing = { workspace = true }
tempfile = "3.14.0"
glob = "0.3"
