[package]
name = "module_max_lines"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
test = false

[features]
default = []
dylint-driver = [
    "dep:common",
    "dep:dylint_linting",
    "dep:fluent-templates",
    "dep:log",
    "dep:rustc_hir",
    "dep:rustc_lint",
    "dep:rustc_session",
    "dep:rustc_span",
    "dep:whitaker"
]
constituent = ["dylint-driver", "dylint_linting/constituent"]

[dependencies]
dylint_linting = { workspace = true, optional = true }
rustc_hir = { workspace = true, optional = true }
rustc_lint = { workspace = true, optional = true }
rustc_session = { workspace = true, optional = true }
rustc_span = { workspace = true, optional = true }
common = { workspace = true, optional = true }
log = { workspace = true, optional = true }
whitaker = { version = "0.1.0", path = "../../", features = ["dylint-driver"], optional = true }
fluent-templates = { workspace = true, optional = true }

[dev-dependencies]
camino = { workspace = true }
rstest = { version = "0.26.1" }
rstest-bdd = { version = "0.1.0" }
rstest-bdd-macros = { version = "0.1.0" }
dylint_testing = { workspace = true }
tempfile = "3.14.0"
glob = "0.3"
