[package]
name = "module_must_have_inner_docs"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
dylint-driver = [
    "dep:common",
    "dep:dylint_linting",
    "dep:log",
    "dep:rustc_ast",
    "dep:rustc_hir",
    "dep:rustc_lint",
    "dep:rustc_session",
    "dep:rustc_span",
    "dep:whitaker",
]
constituent = ["dylint-driver", "dylint_linting/constituent"]

[dependencies]
dylint_linting = { workspace = true, optional = true }
rustc_ast = { workspace = true, optional = true }
rustc_hir = { workspace = true, optional = true }
rustc_lint = { workspace = true, optional = true }
rustc_session = { workspace = true, optional = true }
rustc_span = { workspace = true, optional = true }
common = { workspace = true, optional = true }
log = { workspace = true, optional = true }
whitaker = { workspace = true, features = ["dylint-driver"], optional = true }
newt-hype = "0.1"

[dev-dependencies]
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
dylint_testing = { workspace = true }
serial_test = "3.1.0"
