[package]
name = "no_expect_outside_tests"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
test = false

[dependencies]
dylint_linting = { workspace = true }
rustc_ast = { workspace = true }
rustc_hir = { workspace = true }
rustc_lint = { workspace = true }
rustc_middle = { workspace = true }
rustc_session = { workspace = true }
rustc_span = { workspace = true }
common = { path = "../../common" }
whitaker = { path = "../../", features = ["dylint-driver"] }
serde = { version = "1.0", features = ["derive"] }
log = { workspace = true }

[dev-dependencies]
rstest = { version = "0.26.1" }
rstest-bdd = { version = "0.1.0-alpha4" }
rstest-bdd-macros = { version = "0.1.0-alpha4" }
dylint_testing = { workspace = true }
