[package]
name = "no_expect_outside_tests"
version = "0.2.2"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
dylint-driver = [
    "dep:common",
    "dep:dylint_linting",
    "dep:log",
    "dep:rustc_ast",
    "dep:rustc_hir",
    "dep:rustc_lint",
    "dep:rustc_middle",
    "dep:rustc_session",
    "dep:rustc_span",
    "dep:serde",
    "dep:whitaker"
]
constituent = ["dylint-driver", "dylint_linting/constituent"]

[dependencies]
dylint_linting = { workspace = true, optional = true }
rustc_ast = { workspace = true, optional = true }
rustc_hir = { workspace = true, optional = true }
rustc_lint = { workspace = true, optional = true }
rustc_middle = { workspace = true, optional = true }
rustc_session = { workspace = true, optional = true }
rustc_span = { workspace = true, optional = true }
common = { workspace = true, optional = true }
whitaker = { workspace = true, features = ["dylint-driver"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
log = { workspace = true, optional = true }

[dev-dependencies]
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
dylint_testing = { workspace = true }
tokio = { version = "1.50.0", features = ["macros", "rt", "rt-multi-thread"] }
temp-env = { workspace = true }
