[package]
name = "no_unwrap_or_else_panic"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
test = false

[features]
default = []
dylint-driver = [
    "dep:dylint_linting",
    "dep:log",
    "dep:rustc_ast",
    "dep:rustc_hir",
    "dep:rustc_lint",
    "dep:rustc_middle",
    "dep:rustc_span",
    "dep:serde",
    "dep:whitaker",
]
clippy = ["dylint-driver", "dep:clippy_utils"]

[dependencies]
common = { path = "../../common" }
dylint_linting = { workspace = true, optional = true }
log = { workspace = true, optional = true }
rustc_hir = { workspace = true, optional = true }
rustc_lint = { workspace = true, optional = true }
rustc_middle = { workspace = true, optional = true }
rustc_span = { workspace = true, optional = true }
rustc_ast = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
whitaker = { path = "../../", features = ["dylint-driver"], optional = true }
clippy_utils = { workspace = true, optional = true }

[dev-dependencies]
camino = { workspace = true }
dylint_testing = { workspace = true }
rstest = "0.26.1"
rstest-bdd = "0.1.0"
rstest-bdd-macros = "0.1.0"

[lints.clippy]
expect_used = "deny"
unwrap_used = "deny"
