[package]
name = "rstest_helper_should_be_fixture"
version = "0.2.5"
edition = "2024"
publish = false
description = "Dylint lint that bootstraps rstest helper fixture extraction checks"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
test = false

[features]
default = []
dylint-driver = [
    "dep:whitaker-common",
    "dep:dylint_linting",
    "dep:log",
    "dep:rustc_lint",
    "dep:rustc_session",
    "dep:serde",
    "dep:whitaker",
]
constituent = ["dylint-driver", "dylint_linting/constituent"]

[dependencies]
whitaker-common = { workspace = true, optional = true }
dylint_linting = { workspace = true, optional = true }
log = { workspace = true, optional = true }
rustc_lint = { workspace = true, optional = true }
rustc_session = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
whitaker = { workspace = true, features = ["dylint-driver"], optional = true }

[dev-dependencies]
proptest = "1"
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
toml = { workspace = true }
